<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="372dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <ImageButton
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/ubunturegular"
        android:gravity="top"
        android:text="@string/quiz_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/menuButton"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="668dp"
        android:background="@drawable/signup_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

    <HorizontalScrollView
        android:id="@+id/hsvQuestionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/question_1"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/_1"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/question_2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/_2"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/question_3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/_3"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/question_4"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/_4"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/question_5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/_5"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/question_6"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/_6"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/question_7"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/_7"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/question_8"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/_8"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/question_9"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/_9"
                android:textSize="18dp"/>

            <Button
                android:id="@+id/question_10"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/_10"
                android:textSize="18dp"/>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/ubunturegular"
        android:text="Question"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hsvQuestionNumber" />

    <RadioGroup
        android:id="@+id/rgAnswerOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"
        app:layout_constraintVertical_bias="0.149">

        <RadioButton
            android:id="@+id/option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_radio"
            android:fontFamily="@font/ubunturegular"
            android:paddingStart="10dp"
            android:text="@string/option_1"
            android:textColor="#333333"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="231dp" />

        <RadioButton
            android:id="@+id/option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:button="@drawable/custom_radio"
            android:fontFamily="@font/ubunturegular"
            android:paddingStart="10dp"
            android:text="@string/option_2"
            android:textColor="#333333"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/rgAnswerOption"
            tools:layout_editor_absoluteX="24dp" />

        <RadioButton
            android:id="@+id/option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:button="@drawable/custom_radio"
            android:fontFamily="@font/ubunturegular"
            android:paddingStart="10dp"
            android:text="@string/option_3"
            android:textColor="#333333"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/option2"
            tools:layout_editor_absoluteX="24dp" />

        <RadioButton
            android:id="@+id/option4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:button="@drawable/custom_radio"
            android:fontFamily="@font/ubunturegular"
            android:paddingStart="10dp"
            android:text="@string/option_4"
            android:textColor="#333333"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@+id/option3"
            tools:layout_editor_absoluteX="24dp" />
    </RadioGroup>

    <ImageButton
        android:id="@+id/buttonLastQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/roundedbutton"
        android:contentDescription="@string/back"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/baseline_arrow_back_ios_new_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>