<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Activity_quiz">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#00000000"
            android:elevation="4dp"
            app:navigationIcon="@drawable/menu_icon"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_marginTop="10dp">

        </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="372dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/helloTextView"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="82dp"
        android:fontFamily="@font/dmsans"
        android:gravity="top"
        android:text="Hello!"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="105dp"
        android:fontFamily="@font/ubunturegular"
        android:gravity="top"
        android:text="@string/test_your_knowledge"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloTextView"
        android:textStyle="bold"/>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="608dp"
        android:background="@drawable/signup_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        app:layout_constraintVertical_bias="1.0" />

    <HorizontalScrollView
        android:id="@+id/hsvFieldList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="16dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_argriculture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@color/transparent"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/agriculture"
                android:textAllCaps="false"
                android:textColor="@drawable/button_selector"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button_architecture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/architecture"
                android:textAllCaps="false"
                android:textColor="@drawable/button_selector"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button_arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/arts"
                android:textAllCaps="false"
                android:textColor="@drawable/button_selector"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/business"
                android:textAllCaps="false"
                android:textColor="@drawable/button_selector"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button_education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/education"
                android:textAllCaps="false"
                android:textColor="@drawable/button_selector"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/health_science"
                android:textAllCaps="false"
                android:textColor="@drawable/button_selector"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button_it"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/information_n_technology"
                android:textAllCaps="false"
                android:textColor="@drawable/button_selector"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button_law"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/law"
                android:textAllCaps="false"
                android:textColor="@drawable/button_selector"
                style="?android:attr/buttonBarButtonStyle"
                />

            <Button
                android:id="@+id/button_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/language"
                android:textAllCaps="false"
                android:textColor="@drawable/button_selector"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button_science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/ubunturegular"
                android:text="@string/science_technology"
                android:textAllCaps="false"
                android:textColor="@drawable/button_selector"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvQuizList"
            android:layout_width="365dp"
            android:layout_height="364dp"
            android:layout_marginHorizontal="20px"
            android:layout_marginTop="270dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hsvFieldList" />

    <Button
        android:id="@+id/buttonLeaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_rounded_edge_button"
        android:fontFamily="@font/ubunturegular"
        android:gravity="center_vertical"
        android:paddingHorizontal="125dp"
        android:paddingVertical="15dp"
        android:text="Leaderboard"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvQuizList"
        android:layout_marginTop="650dp"
        android:layout_marginLeft="23dp"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="-16dp"
            android:background="@drawable/background"
            android:backgroundTint="#00000000"
            app:fabCradleMargin="10dp"
            app:fabCradleRoundedCornerRadius="50dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/menu_bar_color"
                app:itemIconTint="@color/white"
                app:itemTextColor="@color/white"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/bottom_nav_menu" />

        </com.google.android.material.bottomappbar.BottomAppBar>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigation_drawer"
        android:layout_gravity="start"
        android:background="@color/white"
        app:itemIconTint="#20339A"
        app:itemTextColor="#20339A"
        android:theme="@style/ThemeOverlay.AppCompat.navTheme"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>