<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="360dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginTop="3dp"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/HelloUser"
        android:layout_width="141dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/hello"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ExploreScholars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/explore_scholarship_opportunities"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelloUser" />

    <View
        android:id="@+id/BottomPart"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/signup_btn"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:scrollbars="none"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/BottomPart">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:text="@string/view_all"
                android:textColor="@color/grey"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:text="International"
                android:textColor="@color/grey"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:text="Local"
                android:textColor="@color/grey"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:text="For Athletes"
                android:textColor="@color/grey"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:text="For Disabled Students"
                android:textColor="@color/grey"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                />



        </LinearLayout>
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>